# Deterministic-Structural-Plasticity-Language-Model

./: .gitignore  CLAUDE.md  Colab_Trainable_Dendritic_LM.ipynb  README.md  chat.py  colab_trainable_dendritic_lm.ipynb  colab_trainable_dendritic_lm.py  pyproject.toml  requirements.txt
.serena/: project.yml
.trunk/: trunk.yaml
docs/: developmental_sparsity.md  looped_resonator_blocks.md  recurrent_inference.md
research_harness/: autoresearch_notebook.ipynb  autoresearch_notebook.py  dendrite_sweep.py  dendrite_sweep_results.tsv  muon.py  muon_sweep_results.tsv  mup_sweep_results.tsv  notebook_results.tsv  prepare_data.py  results.tsv  scaling_law_roadmap.md  train_harness.py
tests/: test_checkpoint.py  test_config.py  test_data_pipeline.py  test_dendrite.py  test_planning_domain.py  test_triton_vandermonde.py
