[project]
name = "deterministic-structural-plasticity-language-model"
version = "0.1.0"
description = "DSP-LM: Deterministic Structural Plasticity Language Model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.19",
    "accelerate>=0.30",
    "jupytext>=1.16",
]

[project.optional-dependencies]
# 8-bit AdamW (bitsandbytes) cuts optimizer-state VRAM ~4x -- see Config.optim_8bit.
# CUDA + Linux/Windows only, hence optional rather than a hard dependency.
eightbit = ["bitsandbytes>=0.43"]
dev = ["pytest>=8"]
# research_harness/: fast-iteration val_bpb harness (see research_harness/README.md).
# Only needed for that data-prep/eval pipeline, not for training DSP-LM itself.
harness = ["requests>=2.32", "pyarrow>=21.0", "rustbpe>=0.1", "tiktoken>=0.11"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
